# OpenTrader

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  Trader.cpp
data/: btc_historical_data.csv  btc_historical_data_1.csv  btc_historical_data_4_6_2023.csv
lab/: mongo_query_notes.txt
lab/Notebooks/: Constant_Step_Offset.ipynb  explore_0.ipynb
lab/backtest_tutorials/: SmaCross.html  initial_sample.py
org/: py2cpp.org  trader.org
scripts/: setup_env_linux.sh  setup_env_mac.sh  start_telegram_server  start_telegram_server.sh  start_trader_env.sh  start_trader_env_linux.sh  start_trader_env_mac.sh  stop_trader_env.sh
src/: back_test.py  gemini_order_tester.py  gemini_trader.py  globalContext.py  historical_data_ibkr.py  mongo_tester.py  trader.py
src/back_tester/: BackTester.py  MockFeeStructure.py  MongoBackTester.py  default_fees.json
src/extras/: globalContext.py
src/gemini/: btc_data_stream.py  btc_price_fetch.py  example_key.py  gemini_order_events.py
src/gemini_app/: GeminiApp.py
src/ibkr_app/: AppResponseErrorState.py  IBKRApp.py
src/ibkr_app/exception/: OrderTrackerException.py  (+1 more)
src/logic/: ConstantStepOffset.py  ConstantStepOffsetStateCodec.py  ConstantStepOffsetTraderState.py  DoubleDown.py  TraderLogic.py
src/state_tracking/: EntryTracker.py  OrderSubscription.py  PriceSubscription.py  Tracker.py
src/telegram_notifications/: DemoApp.py  TelegramNotifications.py  TelegramNotificationsServer.py
src/trader_ledger/: Entry.py  EntryContext.py  LedgerContextManager.py  LedgerManager.py
src/trader_mongo/: TraderMongoInterface.py
(+10 files in other folders)
